Fix info img not aligning with daynumber in monthview with android

--- a/front/src/monthview/Monthview.css
+++ b/front/src/monthview/Monthview.css
@@ -171,7 +171,7 @@
 
 .Monthview-info {
   position: absolute;
-  margin-top: 3px;
+  margin-top: 2pt;
   width: 20px;
   height: 20px;
 }
